// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> renders correctly 1`] = `
<span
  className="tooltip -teal top center"
>
  <i
    className="icon -teal"
  >
    <svg
      height="1em"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M256,56C145.72,56,56,145.72,56,256s89.72,200,200,200,200-89.72,200-200S366.28,56,256,56Zm0,82a26,26,0,1,1-26,26A26,26,0,0,1,256,138Zm64,226H200V332h44V244H212V212h64V332h44Z"
      />
    </svg>
  </i>
  <span
    className="tooltiptext"
    data-tooltip="Text text text text text"
  />
</span>
`;

exports[`<Tooltip /> renders correctly with optional props 1`] = `
<span
  className="tooltip class -teal bottom left"
>
  <i
    className="icon -teal"
  >
    <svg
      height="1em"
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M256,56C145.72,56,56,145.72,56,256s89.72,200,200,200,200-89.72,200-200S366.28,56,256,56Zm0,82a26,26,0,1,1-26,26A26,26,0,0,1,256,138Zm64,226H200V332h44V244H212V212h64V332h44Z"
      />
    </svg>
  </i>
  <span
    className="tooltiptext"
    data-tooltip="Text text text text text"
  />
</span>
`;
